<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Project Coordinates (Updated for WordDictUtils) -->
  <groupId>com.github.MichaelKazarian</groupId>
  <artifactId>WordDictUtils</artifactId>
  <version>1.0.0</version>
  <packaging>jar</packaging>

  <name>WordDictUtils</name>
  <description>WordDictUtils is a collection of essential utilities for the manipulation of word and dictionaries data using the open WordDolphin format.</description>
  <url>https://github.com/MichaelKazarian/WordDictUtils</url>

  <licenses>
    <license>
      <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>michaelkazarian</id>
      <name>Michael Kazarian</name>
      <url>https://github.com/MichaelKazarian</url>
    </developer>
  </developers>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <!-- 1. Dependency on WordDictCore (from JitPack) -->
    <dependency>
      <groupId>com.github.MichaelKazarian</groupId>
      <artifactId>WordDictCore</artifactId>
      <version>1.0.0</version>
    </dependency>

    <!-- 2. JSON parsing (Inherited) -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20250517</version>
    </dependency>

    <!-- 3. JUnit tests (Inherited) -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
      <scope>test</scope>
    </dependency>

    <!-- 4. Picocli annotation processor for CLI metadata -->
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>4.7.6</version>
    </dependency>
  </dependencies>

  <!-- Repositories needed to resolve JitPack dependencies -->
  <repositories>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <!-- Create a single JAR with dependencies and main class -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.6.0</version>
        <configuration>
          <finalName>${project.artifactId}-${project.version}</finalName>
          <appendAssemblyId>false</appendAssemblyId>
          <archive>
            <manifest>
              <mainClass>com.worddict.worddictutils.WordDictUtils</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-assembly</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>
</project>
